Fix header cart icon alignment when no menu and woocommerce active

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -57,6 +57,7 @@
 .branding {
 	display: flex;
 	z-index: 1;
+	margin-right: auto;
 }
 .custom-logo-link {
 	margin-right: 12px;
