--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -4,7 +4,6 @@
 	letter-spacing: .05em;
 	font-size: var(--text-sm);
 	font-weight: 600;
-	margin-left: auto;
 	z-index: 1;
 
 	ul {
